--- a/portfolio.html
+++ b/portfolio.html
@@ -44,17 +44,30 @@
         <address class="contacts">
           <ul class="list contacts-list">
             <li class="contacts-item">
-              <a class="contacts-link link" href="mailto:info@devstudio.com"
+              <a
+                class="contacts-link contacts-link-email link"
+                href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li class="contacts-item">
-              <a class="contacts-link link" href="tel:+110001111111"
+              <a
+                class="contacts-link contacts-link-phone link"
+                href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
           </ul>
         </address>
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="menu-toggle-icon" width="32" height="22">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -78,13 +91,29 @@
             <li class="cards-item">
               <a class="cards-link link" href=""
                 ><div class="cards-image-box">
-                  <img
-                    src="./images/cards/cards-1-1x.jpg"
-                    alt="App concept"
-                    width="360"
-                    height="300"
-                  />
-
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/cards/cards-1-1158@1x.jpg 1x,
+                        ./images/cards/cards-1-1158@2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/cards/cards-1-768@1x.jpg 1x,
+                        ./images/cards/cards-1-768@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      srcset="
+                        ./images/cards/cards-1-428@1x.jpg 1x,
+                        ./images/cards/cards-1-428@2x.jpg 2x
+                      "
+                      alt="App concept"
+                    />
+                  </picture>
                   <p class="cards-overlay cards-overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -100,13 +129,29 @@
             <li class="cards-item">
               <a class="cards-link link" href="">
                 <div class="cards-image-box">
-                  <img
-                    src="./images/cards/cards-2-1x.jpg"
-                    alt="Payment samples"
-                    width="360"
-                    height="300"
-                  />
-
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/cards/cards-2-1158@1x.jpg 1x,
+                        ./images/cards/cards-2-1158@2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/cards/cards-2-768@1x.jpg 1x,
+                        ./images/cards/cards-2-768@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      srcset="
+                        ./images/cards/cards-2-428@1x.jpg 1x,
+                        ./images/cards/cards-2-428@2x.jpg 2x
+                      "
+                      alt="Payment samples"
+                    />
+                  </picture>
                   <p class="cards-overlay cards-overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -122,13 +167,29 @@
             <li class="cards-item">
               <a class="cards-link link" href="">
                 <div class="cards-image-box">
-                  <img
-                    src="./images/cards/cards-3-1x.jpg"
-                    alt="Laptop interface"
-                    width="360"
-                    height="300"
-                  />
-
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/cards/cards-3-1158@1x.jpg 1x,
+                        ./images/cards/cards-3-1158@2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/cards/cards-3-768@1x.jpg 1x,
+                        ./images/cards/cards-3-768@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      srcset="
+                        ./images/cards/cards-3-428@1x.jpg 1x,
+                        ./images/cards/cards-3-428@2x.jpg 2x
+                      "
+                      alt="Laptop interface"
+                    />
+                  </picture>
                   <p class="cards-overlay cards-overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -144,13 +205,29 @@
             <li class="cards-item">
               <a class="cards-link link" href="">
                 <div class="cards-image-box">
-                  <img
-                    src="./images/cards/cards-4-1x.jpg"
-                    alt="Driving man"
-                    width="360"
-                    height="300"
-                  />
-
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/cards/cards-4-1158@1x.jpg 1x,
+                        ./images/cards/cards-4-1158@2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/cards/cards-4-768@1x.jpg 1x,
+                        ./images/cards/cards-4-768@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      srcset="
+                        ./images/cards/cards-4-428@1x.jpg 1x,
+                        ./images/cards/cards-4-428@2x.jpg 2x
+                      "
+                      alt="Driving man"
+                    />
+                  </picture>
                   <p class="cards-overlay cards-overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -166,13 +243,29 @@
             <li class="cards-item">
               <a class="cards-link link" href="">
                 <div class="cards-image-box">
-                  <img
-                    src="./images/cards/cards-5-1x.jpg"
-                    alt="Screen illustration"
-                    width="360"
-                    height="300"
-                  />
-
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/cards/cards-5-1158@1x.jpg 1x,
+                        ./images/cards/cards-5-1158@2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/cards/cards-5-768@1x.jpg 1x,
+                        ./images/cards/cards-5-768@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      srcset="
+                        ./images/cards/cards-5-428@1x.jpg 1x,
+                        ./images/cards/cards-5-428@2x.jpg 2x
+                      "
+                      alt="Screen illustration"
+                    />
+                  </picture>
                   <p class="cards-overlay cards-overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -188,13 +281,29 @@
             <li class="cards-item">
               <a class="cards-link link" href="">
                 <div class="cards-image-box">
-                  <img
-                    src="./images/cards/cards-6-1x.jpg"
-                    alt="A student"
-                    width="360"
-                    height="300"
-                  />
-
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/cards/cards-6-1158@1x.jpg 1x,
+                        ./images/cards/cards-6-1158@2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/cards/cards-6-768@1x.jpg 1x,
+                        ./images/cards/cards-6-768@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      srcset="
+                        ./images/cards/cards-6-428@1x.jpg 1x,
+                        ./images/cards/cards-6-428@2x.jpg 2x
+                      "
+                      alt="A student"
+                    />
+                  </picture>
                   <p class="cards-overlay cards-overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -210,13 +319,29 @@
             <li class="cards-item">
               <a class="cards-link link" href="">
                 <div class="cards-image-box">
-                  <img
-                    src="./images/cards/cards-7-1x.jpg"
-                    alt="Callories app ui"
-                    width="360"
-                    height="300"
-                  />
-
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/cards/cards-7-1158@1x.jpg 1x,
+                        ./images/cards/cards-7-1158@2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/cards/cards-7-768@1x.jpg 1x,
+                        ./images/cards/cards-7-768@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      srcset="
+                        ./images/cards/cards-7-428@1x.jpg 1x,
+                        ./images/cards/cards-7-428@2x.jpg 2x
+                      "
+                      alt="Callories app ui"
+                    />
+                  </picture>
                   <p class="cards-overlay cards-overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -232,13 +357,29 @@
             <li class="cards-item">
               <a class="cards-link link" href="">
                 <div class="cards-image-box">
-                  <img
-                    src="./images/cards/cards-8-1x.jpg"
-                    alt="Veggies"
-                    width="360"
-                    height="300"
-                  />
-
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/cards/cards-8-1158@1x.jpg 1x,
+                        ./images/cards/cards-8-1158@2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/cards/cards-8-768@1x.jpg 1x,
+                        ./images/cards/cards-8-768@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      srcset="
+                        ./images/cards/cards-8-428@1x.jpg 1x,
+                        ./images/cards/cards-8-428@2x.jpg 2x
+                      "
+                      alt="Veggies"
+                    />
+                  </picture>
                   <p class="cards-overlay cards-overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -254,13 +395,29 @@
             <li class="cards-item">
               <a class="cards-link link" href="">
                 <div class="cards-image-box">
-                  <img
-                    src="./images/cards/cards-9-1x.jpg"
-                    alt="Man pouring coffee"
-                    width="360"
-                    height="300"
-                  />
-
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/cards/cards-9-1158@1x.jpg 1x,
+                        ./images/cards/cards-9-1158@2x.jpg 2x
+                      "
+                      media="(min-width: 1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/cards/cards-9-768@1x.jpg 1x,
+                        ./images/cards/cards-9-768@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      srcset="
+                        ./images/cards/cards-9-428@1x.jpg 1x,
+                        ./images/cards/cards-9-428@2x.jpg 2x
+                      "
+                      alt="Man pouring coffee"
+                    />
+                  </picture>
                   <p class="cards-overlay cards-overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -359,5 +516,73 @@
         </div>
       </div>
     </footer>
+    <div class="menu js-menu-container" id="mobile-menu">
+      <div class="menu-container">
+        <button class="menu-toggle menu-toggle-close js-close-menu">
+          <svg class="menu-toggle-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-menu-close"></use>
+          </svg>
+        </button>
+
+        <ul class="menu-navigation list">
+          <li class="menu-navigation-item">
+            <a href="./index.html" class="menu-navigation-link link">Studio</a>
+          </li>
+          <li class="menu-navigation-item">
+            <a href="./portfolio.html" class="menu-navigation-link link current"
+              >Portfolio</a
+            >
+          </li>
+          <li class="menu-navigation-item">
+            <a href="#" class="menu-navigation-link link">Contacts</a>
+          </li>
+        </ul>
+        <ul class="list menu-contacts-list">
+          <li class="menu-contacts-item">
+            <a
+              href="tel:+110001111111"
+              class="link menu-contacts-link menu-contacts-tel"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li class="menu-contacts-item">
+            <a href="mailto:info@devstudio.com" class="link menu-contacts-link"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="list menu-social-list">
+          <li class="menu-social-item">
+            <a href="https://www.instagram.com/" class="link menu-social-link">
+              <svg class="menu-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-social-item">
+            <a href="https://www.facebook.com/" class="link menu-social-link">
+              <svg class="menu-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-social-item">
+            <a href="https://twitter.com/" class="link menu-social-link">
+              <svg class="menu-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter-x"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-social-item">
+            <a href="https://www.linkedin.com/" class="link menu-social-link">
+              <svg class="menu-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
